--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Exercicios em casa/Pet e Dono/Pet_e_dono/target/
 /Lista de Exercicios 3/LigacaoTelefonica/target/
 /Lista de Exercicios 3/Shopping/target/
+/Lista de Exercicios 3/Faculdade/target/
