Revisando para prova
Tinha feito esses exercicios ontem mas esqueci de passar

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Lista de Exercicios 3/LigacaoTelefonica/target/
 /Lista de Exercicios 3/Shopping/target/
 /Lista de Exercicios 3/Faculdade/target/
+/Revisão Prova 1/Sistema_Biblioteca_Digital/target/
+/Revisão Prova 1/Sistema_Restaurante/target/
