--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /Lista de Exercicios 3/Faculdade/target/
 /Revisão Prova 1/Sistema_Biblioteca_Digital/target/
 /Revisão Prova 1/Sistema_Restaurante/target/
+/Unidade 2/Lista de Exercicios/Ex1/SistemaBR101/target/
