--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Revisão Prova 1/Sistema_Restaurante/target/
 /Unidade 2/Lista de Exercicios/Ex1/SistemaBR101/target/
 /Unidade 2/Exercicios Feito na Sala/Ex3/NetBeans/Seguradora/target/
+/Unidade 2/Lista de Exercicios/Ex2/EmpresaVisa/target/
